[project]
name = "news-fetcher"
version = "0.1.0"
description = "Zero-cost CLI news fetcher for RSS and Google News"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.scripts]
news-fetcher = "news_fetcher.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/news_fetcher"]
